terraform/plan/lambda-best-practices/check-lambda-public-access/test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test-01
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --payload ./good-test/good-payload-01.json --policy ../check-lambda-public-access.yaml --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-lambda-public-access
                rules:
                - rule:
                    name: check-lambda-public-access
                  error: ~
                  violations: ~
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-01
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --payload ./bad-test/bad-payload-01.json --policy ../check-lambda-public-access.yaml --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-lambda-public-access
                rules:
                - rule:
                    name: check-lambda-public-access
                  error: ~
                  violations:
                  - (contains(message, 'Principal must be set to a specific resource or user account and not \'*\'')): true
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: 'Expected value: true'
